<?xml version="1.0"?>
<package format="3">
  <name>autoware_launcher</name>
  <version>1.12.0</version>
  <description>The tool for easily launching Autoware</description>
  <maintainer email="isamu.takagi@tier4.jp">Isamu Takagi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</depend>
  <depend>python_qt_binding</depend>
  <depend>rospy</depend>

  <test_depend>rostest</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-nose</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-nose</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</test_depend>
</package>
